@@ -1,4 +1,5 @@
-/***** BEGIN LICENSE BLOCK *****
+/*
+ **** BEGIN LICENSE BLOCK *****
  * Version: EPL 2.0/GPL 2.0/LGPL 2.1
  *
  * The contents of this file are subject to the Eclipse Public
@@ -46,6 +47,7 @@ import org.jruby.runtime.ThreadContext;
 import org.jruby.runtime.Visibility;
 import org.jruby.runtime.builtin.IRubyObject;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
@@ -89,16 +91,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         if (wrappedMap == null) {
             wrappedMap = new RubyHashMap(runtime, this);
         }
-        // (JavaProxy)recv).getObject() might raise exception when
-        // wrong number of args are given to the constructor.
-        IRubyObject oldExc = runtime.getGlobalVariables().get("$!"); // Save $!
-        try {
-            wrappedMap.setSize( getMapObject().size() );
-        }
-        catch (RaiseException e) {
-            wrappedMap.setSize(0);
-            runtime.getGlobalVariables().set("$!", oldExc); // Restore $!
-        }
         return wrappedMap;
     }
 
@@ -113,12 +105,13 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
             this.receiver = receiver;
         }
 
-        private void syncSize() { this.size = mapDelegate().size(); }
-
-        private void setSize(int size) { this.size = size; }
-
         // the underlying Map object operations should be delegated to
         private Map mapDelegate() { return receiver.getMapObject(); }
+
+        @Override
+        public int size() {
+            return mapDelegate().size();
+        }
 
         @Override
         public RubyFixnum rb_size(ThreadContext context) {
@@ -132,31 +125,17 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
         @Override
         public IRubyObject inspect(ThreadContext context) {
-            syncSize();
             return super.inspect(context);
         }
 
         @Override
         public RubyArray to_a(ThreadContext context) {
-            syncSize();
             return super.to_a(context);
         }
 
         @Override
         public RubyFixnum hash(ThreadContext context) {
             return getRuntime().newFixnum( mapDelegate().hashCode() );
-        }
-
-        @Override
-        public RubyArray keys(ThreadContext context) {
-            syncSize();
-            return super.keys(context);
-        }
-
-        @Override
-        public RubyArray values(ThreadContext context) {
-            syncSize();
-            return super.values(context);
         }
 
         @Override
@@ -171,13 +150,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         }
 
         @Override
-        public RubyHash delete_ifInternal(final ThreadContext context, final Block block) {
-            RubyHash self = super.delete_ifInternal(context, block);
-            setSize( mapDelegate().size() );
-            return self;
-        }
-
-        @Override
         public IRubyObject internalPut(final IRubyObject key, final IRubyObject value) {
             return internalPutNoResize(key, value, true);
         }
@@ -189,7 +161,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
             final Map<Object, Object> map = mapDelegate();
             Object javaValue = value.toJava(Object.class);
             Object existing = map.put(key.toJava(Object.class), javaValue);
-            setSize( map.size() );
             if (existing != null) {
                 if (existing == javaValue) return value;
                 return JavaUtil.convertJavaToUsableRubyObject(runtime, existing);
@@ -203,7 +174,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
             @SuppressWarnings("unchecked")
             final Map<Object, Object> map = mapDelegate();
             map.put(key.decodeString(), value.toJava(Object.class));
-            setSize( map.size() );
         }
 
         @Override
@@ -239,7 +209,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
             if (value != null) {
                 map.remove(convertedKey);
-                setSize( map.size() );
                 return new RubyHashEntry(key.hashCode(), key, JavaUtil.convertJavaToUsableRubyObject(getRuntime(), value), null, null);
             }
             return NO_ENTRY;
@@ -252,7 +221,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
             if (map.containsKey(convertedKey)) {
                 map.remove(convertedKey);
-                setSize( map.size() );
                 return entry;
             }
 
@@ -272,15 +240,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
                 IRubyObject value = JavaUtil.convertJavaToUsableRubyObject(runtime, entry.getValue());
                 visitor.visit(context, this, key, value, index++, state);
             }
-        }
-
-        @Override
-        public RubyBoolean compare(final ThreadContext context, final VisitorWithState<RubyHash> method, IRubyObject other) {
-            syncSize();
-            if ( other instanceof RubyHashMap ) {
-                ((RubyHashMap) other).syncSize();
-            }
-            return super.compare(context, method, other);
         }
 
         @Override
@@ -304,7 +263,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         @Override
         public RubyBoolean compare_by_identity_p(ThreadContext context) {
             // NOTE: obviously little we can do to detect - but at least report Java built-in one :
-            return RubyBoolean.newBoolean(context,  mapDelegate() instanceof java.util.IdentityHashMap );
+            return RubyBoolean.newBoolean(context, mapDelegate() instanceof java.util.IdentityHashMap );
         }
 
         @Override // re-invent @JRubyMethod(name = "any?")
@@ -361,7 +320,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         @Override
         public RubyHash rb_clear(ThreadContext context) {
             mapDelegate().clear();
-            setSize( 0 );
             return this;
         }
 
@@ -419,7 +377,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "default=", required = 1)
     public IRubyObject default_value_set(ThreadContext context, final IRubyObject defaultValue) {
-        return getOrCreateRubyHashMap(context.runtime).default_value_set(defaultValue);
+        return getOrCreateRubyHashMap(context.runtime).default_value_set(context, defaultValue);
     }
 
     /** rb_hash_default_proc
@@ -427,7 +385,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "default_proc")
     public IRubyObject default_proc(ThreadContext context) {
-        return getOrCreateRubyHashMap(context.runtime).default_proc();
+        return getOrCreateRubyHashMap(context.runtime).default_proc(context);
     }
 
     /** rb_hash_set_default_proc
@@ -435,7 +393,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "default_proc=")
     public IRubyObject set_default_proc(ThreadContext context, IRubyObject proc) {
-        return getOrCreateRubyHashMap(context.runtime).set_default_proc(proc);
+        return getOrCreateRubyHashMap(context.runtime).set_default_proc(context, proc);
     }
 
     /** rb_hash_inspect
@@ -451,7 +409,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = {"size", "length"})
     public RubyFixnum rb_size(ThreadContext context) {
-        return getOrCreateRubyHashMap(context.runtime).rb_size();
+        return getOrCreateRubyHashMap(context.runtime).rb_size(context);
     }
 
     /** rb_hash_empty_p
@@ -501,7 +459,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = { "to_hash", "to_h" })
     public RubyHash to_hash(ThreadContext context) {
-        return getOrCreateRubyHashMap(context.runtime).to_hash();
+        return getOrCreateRubyHashMap(context.runtime).to_hash(context);
     }
 
     /** rb_hash_aset
@@ -838,13 +796,13 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
     private MapJavaProxy dupImpl(final String method) {
         final Map map = getMapObject();
         try {
-            Map newMap = map.getClass().newInstance();
+            Map newMap = map.getClass().getConstructor().newInstance();
             newMap.putAll(map);
             MapJavaProxy proxy = new MapJavaProxy(getRuntime(), metaClass);
             proxy.setObject(newMap);
             return proxy;
         }
-        catch (InstantiationException|IllegalAccessException ex) {
+        catch (InstantiationException|IllegalAccessException|NoSuchMethodException| InvocationTargetException ex) {
             final RaiseException e = getRuntime().newNotImplementedError("can't "+ method +" Map of type " + getObject().getClass().getName());
             e.initCause(ex); throw e;
         }
